Colab을 통해 생성됨

--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1h-itmnLVNL6Bwu0w7cUeatsZ6y1c-0P8",
-      "authorship_tag": "ABX9TyP+31psxU42C+h8+wyV3USN",
+      "authorship_tag": "ABX9TyO11NQbdpII4ZEUltx//Oxk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,7 +63,8 @@
     {
       "cell_type": "code",
       "source": [
-        "path = '/content/drive/MyDrive/CV_img_data/True/clim_yeeun'\n",
+        "path = '/content/drive/MyDrive/CV_img_data/True/clim_yeeun' #path of images\n",
+        "save_path = '' #path of save directory\n",
         "import os\n",
         "imgs = os.listdir(path)\n"
       ],
@@ -332,7 +333,7 @@
         "id": "d1cEAVprmeoR",
         "outputId": "4b65f4d9-0264-4d4a-eecd-e6e313d7bee5"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -570,13 +571,14 @@
       "metadata": {
         "id": "eFh4hxcgm-Ot"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "coordinate_df"
+        "coordinate_df\n",
+        "coordinate_df.to_csv(save_path+'keypoint_data.csv', index=True)"
       ],
       "metadata": {
         "id": "zlRJBN5o5GMy",
@@ -586,7 +588,7 @@
         },
         "outputId": "8b56f468-615f-4fdb-c55d-21798d89131d"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1428,17 +1430,6 @@
           "execution_count": 32
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "labels = {labels}"
-      ],
-      "metadata": {
-        "id": "3cSbmuwg5RdO"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
